[gd_scene load_steps=24 format=2]

[ext_resource path="res://Parrot_Running.png" type="Texture" id=1]
[ext_resource path="res://Parrot_Attacking.png" type="Texture" id=2]
[ext_resource path="res://player.gd" type="Script" id=3]
[ext_resource path="res://Parrot_Idle.png" type="Texture" id=4]
[ext_resource path="res://UI.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=4]
radius = 14.0
height = 4.0

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 800, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 160, 160 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "sprint",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 16, 8.5 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="player_body" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="player_body"]
scale = Vector2( 0.184375, 0.184375 )
frames = SubResource( 36 )
animation = "sprint"

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 2

[node name="AttackCollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 8, 2 )
shape = SubResource( 28 )

[node name="AttackTimer" type="Timer" parent="."]

[node name="UI" parent="." instance=ExtResource( 5 )]
margin_left = -267.0
margin_top = -169.0
margin_right = -164.0
margin_bottom = -120.0

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.4, 0.4 )

[connection signal="animation_finished" from="player_body/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
